updated file name

--- a/index.html
+++ b/index.html
@@ -18,19 +18,22 @@
                 <h1>Hello, I'm Marc!</h1>
                 <p>I love to create things.</p>
             </div>
-
-            <ul class="circles">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-            </ul>
+            
+            <div id="circleContainer">
+                <ul class="circles">
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+            </div>
+            
         </section>
         <section>
 
