--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="x-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="main.js";> </script>
     
     <link rel="stylesheet" href="css/main.css">
@@ -17,54 +18,38 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-custom navbar-mainbg">
-        <!-- <a class="navbar-brand navbar-logo" href="#"></a> -->
-        <button class="navbar-toggler" type="button" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fas fa-bars text-white"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <div class="hori-selector"><div class="left"></div><div class="right"></div></div>
 
-                <li class="nav-item active">
-                    <a class="nav-link" href="#home"><i class="fas fa-tachometer-alt"></i>Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#skills"><i class="far fa-skills"></i>Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#projects"><i class="far fa-clone"></i>Projects</a>
-                </li>
+    <section class="et-hero-tabs" id="home">
+        
+        <div id="intro">
+            <h1>Hello, I'm Marc!</h1>
+            <p>I love to create things.</p>
+        </div>
+        <!-- Circles animation. -->
+        <div id="circleContainer">
+            <ul class="circles">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
             </ul>
         </div>
-    </nav>
 
-
-
+        <div class="et-hero-tabs-container">
+            <a class="et-hero-tab" href="#home">HOME</a>
+            <a class="et-hero-tab" href="#skills">SKILLS</a>
+            <a class="et-hero-tab" href="#projects">PROJECTS</a>
+            <span class="et-hero-tab-slider"></span>
+        </div>
+    </section>
 
     <div class="container">
-        <section id="home">
-            <!-- Intro Header -->
-            <div id="intro">
-                <h1>Hello, I'm Marc!</h1>
-                <p>I love to create things.</p>
-            </div>
-            <!-- Circles animation. -->
-            <div id="circleContainer">
-                <ul class="circles">
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-            </div>
-        </section>
         <section id="skills">
             <div class="titleHeading">
                 <h1>Skills</h1>
@@ -90,6 +75,9 @@
             <div class="titleHeading">
                 <h1>Projects</h1>
             </div>
+        </section>
+        <section id="footer">
+
         </section>
     </div>
 </body>
