--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <li id="skillLi">HTML5</li>
                     <li id="skillLi">SCSS</li>
                     <li id="skillLi">CSS3</li>
+                    <li id="skillLi">JQuery</li>
                     <li id="skillLi">Java</li>
                     <li id="skillLi">C#</li>
                     <li id="skillLi">MS Azure</li>
