--- a/index.html
+++ b/index.html
@@ -50,7 +50,20 @@
     <div class="container">
         <section id="skills">
             <div class="titleHeading">
-                <h1>Skills</h1>
+                <!-- <h1>Skills</h1> -->
+            </div>
+
+            <div id="certContainer">
+                <ul id="certUl">
+                    <li class="img__wrap">
+                        <img class="img__img" src="assets/awsCloud.png">
+                        <p class="img__description">*Exam Pending</p>
+                    </li>
+                    <li class="img__wrap">
+                        <img class="img__img" src="assets/azureAI.png">
+                        <p class="img__description">*Exam Pending</p>
+                    </li>
+                </ul>
             </div>
             
             <div id="skillsList">
