--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
     <link rel="stylesheet" href="css/main.css">
 
+    <link rel="icon" type="image/x-icon" href="/assets/cloud.png">
     <title>Marc Brophy</title>
 </head>
 
