--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="main.js";> </script>
+    <script src="main.js";></script>
+
+    <script src="modal.js";></script>
     
     <link rel="stylesheet" href="css/main.css">
 
@@ -47,11 +49,34 @@
         </div>
     </section>
 
+    <!-- Modal Handler. -->
+    <div id="modal-container">
+        <div class="modal-background">
+            <div class="modal">
+                <h2>Project 1</h2>
+                <p>Project description.</p>
+                <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+                    <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+                </svg>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
+
+        <!-- Projects Section -->
         <section id="projects">
             <div class="titleHeading">
                 <h1>Projects</h1>
             </div>
+
+            <div id="projectCards">
+                <div class="buttons">
+                    <div id="one" class="button">Card 1</div>
+                </div>
+               
+            </div>
+
         </section>
         <section id="skills">
             <!-- <div class="titleHeading">
