--- a/index.html
+++ b/index.html
@@ -20,10 +20,29 @@
 
 <body>
 
+    <!-- Quick Cards Section -->
+    <div id="modal-container">
+        <div class="modal-background">
+            <div class="modal">
+                <h2>Resume</h2>
+                <p>[attach tex file.]</p>
+                <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+                    <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
+                </svg>
+            </div>
+        </div>
+    </div>
+
     <section class="et-hero-tabs" id="home">
         <div id="intro">
             <h1>Hello, I'm Marc!</h1>
             <p>Software Developer <br> Cloud computing enthusiast.</p>
+        </div>
+        <div id="quickCards">
+            <div class="buttons">
+                <div id="one" class="button">Resume</div>
+            </div>
+           
         </div>
         <!-- Circles animation. -->
         <div id="circleContainer">
@@ -49,32 +68,12 @@
         </div>
     </section>
 
-    <!-- Modal Handler. -->
-    <div id="modal-container">
-        <div class="modal-background">
-            <div class="modal">
-                <h2>Project 1</h2>
-                <p>Project description.</p>
-                <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
-                    <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
-                </svg>
-            </div>
-        </div>
-    </div>
-
     <div class="container">
 
         <!-- Projects Section -->
         <section id="projects">
             <div class="titleHeading">
                 <h1>Projects</h1>
-            </div>
-
-            <div id="projectCards">
-                <div class="buttons">
-                    <div id="one" class="button">Card 1</div>
-                </div>
-               
             </div>
 
         </section>
