--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="modal">
                 <h2>Resume</h2>
                 <!-- <p>[attach tex file.]</p> -->
-                <iframe id="resume" src="assets/docs/resume.txt" width="275" height="250"></iframe>
+                <iframe id="resume" src="assets/resume.pdf" width="275" height="250"></iframe>
                 <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
                     <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
                 </svg>
@@ -82,13 +82,30 @@
             
             <div id="projContainer">
                 <div class="projCard">
-                    <h2>Business Assistant - Cloud, AI</h2>
+                    <h2>Private Cloud for Project Management</h2>
+                    <p>
+                        To simplify file sharing during project development,
+                        I created a private cloud network with Nextcloud in order
+                        to avoid multiple files floating around, and potential data loss
+                        during hardware modifications.
+                    </p>
                 </div>
                 <div class="projCard">
-                    <h2>Simplified Data Handling Datastore Services</h2>
+                    <h2>Simplified Data Handling for Datastore Services</h2>
+                    <p>
+                        This module program simplifies data management for users in conjunction 
+                        with an existing DataStore2 handler. This resource utilizes data compression
+                        and grants the ability for data to be read only on the client, and write
+                        only on the server of video games powered by the Roblox engine.
+                    </p>
                 </div>
                 <div class="projCard">
-                    <h2>Pi Computing</h2>
+                    <h2>Revenue Prediction for Emerging Products</h2>
+                    <p>
+                        This application makes it simple for creators to predict revenue 
+                        based on classifications of their digital product, and previous 
+                        revenue on other products.
+                    </p>
                 </div>
             </div>
         </section>
