--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
     <script src="main.js";></script>
 
     <script src="modal.js";></script>
-    <!-- latex handler -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-    <script src="jquery.jslatex.js"></script>
 
     <link rel="stylesheet" href="css/main.css">
 
@@ -29,7 +26,8 @@
             <div class="modal">
                 <h2>Resume</h2>
                 <!-- <p>[attach tex file.]</p> -->
-                <iframe id="resume" src="assets/resume.pdf" width="275" height="250"></iframe>
+                <iframe id="resume" src="assets/resume-1.png" width="275" height="250"></iframe>
+                
                 <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
                     <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
                 </svg>
