--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
     <div id="modal-container">
         <div class="modal-background">
             <div class="modal">
-                <h2>Resume</h2>
-                <!-- <p>[attach tex file.]</p> -->
-                <iframe id="resume" src="assets/resume-1.png" width="275" height="250"></iframe>
-                
+                <h2>About</h2>
                 <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
                     <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
                 </svg>
@@ -42,7 +39,7 @@
         </div>
         <div id="quickCards">
             <div class="buttons">
-                <div id="one" class="button">Resume</div>
+                <div id="one" class="button">About</div>
             </div>
            
         </div>
