--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </div>
             </div>
             
-            <div id="skills">
+            <!-- <div id="skills">
                 <ul>
                     <li>Python</li>
                     <li>Lua</li>
@@ -190,7 +190,7 @@
                     <li>CSS3</li>
                     <li>SCSS</li>
                 </ul>
-            </div>
+            </div> -->
 
         </section>
         
