--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <div id="one" class="button">About</div>
                 </div>
                 <div class="buttons">
-                    <a href="assets/mbrophy-resume.pdf">
+                    <a href="assets/mbrophy_resume.pdf">
                         <div id="resume" class="button">Resume</div>
                     </a>
                     
@@ -126,7 +126,7 @@
                     </div>
                 </div> -->
 
-                <div class="projCard">
+                <!-- <div class="projCard">
                     <div class="projText">
                         <h2>LeetCode Companion</h2>
                         <p>
@@ -141,7 +141,7 @@
                         </p>
                         <button>Code</button>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="projCard">
                     <div class="projText">
