--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
     <section class="et-hero-tabs" id="home">
         <div id="intro">
             <h1>Hello, I'm Marc!</h1>
-            <p>Software Developer <br> Cloud computing enthusiast.</p>
+            <p>Software Developer <br> Cloud computing enthusiast.
+                <br>
+                [Content is not yet complete and is subject to change.]
+            </p>
             <div id="quickCards">
                 <div class="buttons">
                     <div id="one" class="button">About</div>
